// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/WalletPage/actions/closeWithdrawModal should loadTransactionsSuccess should create closeWithdrawModal action 1`] = `
Object {
  "type": "dicoapp/WalletPage/WITHDRAW_MODAL_CLOSE",
}
`;

exports[`containers/WalletPage/actions/loadTransactions should loadTransactions should create loadTransactions action 1`] = `
Object {
  "type": "dicoapp/WalletPage/LOAD_TRANSACTIONS",
}
`;

exports[`containers/WalletPage/actions/loadTransactionsSuccess should loadTransactionsSuccess should create loadTransactionsSuccess action 1`] = `
Object {
  "type": "dicoapp/WalletPage/LOAD_TRANSACTIONS_SUCCESS",
}
`;

exports[`containers/WalletPage/actions/openWithdrawModal should loadTransactionsSuccess should create openWithdrawModal action 1`] = `
Object {
  "type": "dicoapp/WalletPage/WITHDRAW_MODAL_OPEN",
}
`;
